tests/ui/traits/next-solver/assembly/ambiguity-due-to-uniquification-4.next.stderr
error[E0284]: type annotations needed: cannot normalize `<T as Trait<'_>>::Type`
  --> $DIR/ambiguity-due-to-uniquification-4.rs:17:47
   |
LL | pub fn f<'a, 'b, T: Trait<'a> + Trait<'b>>(v: <T as Trait<'a>>::Type) {}
   |                                               ^^^^^^^^^^^^^^^^^^^^^^ cannot normalize `<T as Trait<'_>>::Type`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
